--- a/main.html
+++ b/main.html
@@ -59,8 +59,19 @@
 				</ul>
 			</div>
 			<div class="description">
-				
+				<h3>BENIFITS</h3>
+                <ul>
+                    <!-- list benifits of apple -->
+                    <li>Apples are nutricious</li>
+                    <li>They are good for digestion</li>
+                    <li>They are rich in fiber</li>
+                    <li>They are good for heart health</li>
+                </ul>
 			</div>
+            <div class="add-to-cart">
+                <button type="submit">ADD TO CART</button>
+            </div>
+        </div>
 		</div>
 	</section>
 </body>
