--- a/main.html
+++ b/main.html
@@ -59,9 +59,8 @@
 				</ul>
 			</div>
 			<div class="description">
-				<h3>BENIFITS</h3>
+				<h3>BENEFITS</h3>
                 <ul>
-                    <!-- list benifits of apple -->
                     <li>Apples are nutricious</li>
                     <li>They are good for digestion</li>
                     <li>They are rich in fiber</li>
